discussion/kv_engine/125163/125163_rev10_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-38326: Refactor magma MetaData and MagmaRequest

Move these to separate files.

This is for preparation of the real fix that needs access to
MagmaRequest to support Mock testing.

Change-Id: I5ee6575655df73e121ff0d56b54cf98108f51901

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Scott Lashley
Date: 2020-04-09 00:00:30.000000000
Message: 
Uploaded patch set 10: Patch Set 9 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-09 00:54:02.000000000
Message: 
Patch Set 10: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27445/ : FAILURE

Failure of a CTest test 379/383 Test #380: cluster_test .................................................................................................................. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27445/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1653/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:26:29: error: expected class name [clang-diagnostic-error]
class MagmaRequest : public IORequest {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:46:16: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return key.size();
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:50:46: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return reinterpret_cast<const char*>(key.data());
                                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1653/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:26:29:
error: expected class name [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1653/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3074/ : FAILURE

Failure of a CTest test [2020-04-09T00:11:56.759Z] 189/400 Test #179: ep-engine_ep_unit_tests.EphemeralOrPersistent/STParameterizedBucketTest ..................................... ( http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3074/ )

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2123/ : FAILURE

Failure of a CTest test [2020-04-09T00:11:21.688Z] 229/397 Test #229: ep_testsuite.full_eviction.rocksdb ..........................................................................Child aborted ( http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2123/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/174/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23477/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3065/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3130/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10928/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-09 02:32:06.000000000
Message: 
Patch Set 10:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27449/ : FAILURE

Failure of a CTest test 379/383 Test #380: cluster_test .................................................................................................................. ( http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27449/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1657/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:26:29: error: expected class name [clang-diagnostic-error]
class MagmaRequest : public IORequest {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:46:16: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return key.size();
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:50:46: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return reinterpret_cast<const char*>(key.data());
                                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1657/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:26:29:
error: expected class name [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1657/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3078/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/178/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23481/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3069/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3135/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10932/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2127/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2020-04-09 08:40:39.000000000
Message: 
Patch Set 10:

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1657/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:26:29: error: expected class name [clang-diagnostic-error]
class MagmaRequest : public IORequest {
                            ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:46:16: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return key.size();
               ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:50:46: error: use of undeclared identifier "key" [clang-diagnostic-error]
        return reinterpret_cast<const char*>(key.data());
                                             ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1657/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy/kv_engine/engines/ep/src/magma-kvstore/magma-kvstore_iorequest.h:26:29:
error: expected class name [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy/1657/ )

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/3078/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/178/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/23481/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/3069/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/3135/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/10932/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/2127/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/27450/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2020-04-09 09:47:33.000000000
Message: 
Patch Set 10:

The clang-tidy issue is an Include What You Use issue. clang-tidy just builds changed/dependent files to save time and an include of kvstore-priv.h is missing from magma-kvstore_iorequest.h. Believe that should fix it. Thanks Richard for taking a look!
----------------------------------------------------------------------------------------------------------------------
